# slambook2

ch3/useEigen/: eigenMatrix.cpp
learn/ch2/: CMakeLists.txt  helloSLAM  helloSLAM.cpp
learn/ch2/.kdev4/: ch2.kdev4
learn/try/: CMakeLists.txt  hi  libHelloSLAM.cpp  try.kdev4  useHello.cpp
learn/try/.kdev4/: try.kdev4
